compiler/testData/diagnostics/tests/inference/kt11963.fir.kt
<!MUST_BE_INITIALIZED!>val <T : <!UNRESOLVED_REFERENCE!>KClass<T>.something<!>> abc<!>
